<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".combate">

    <!--Incluimos el toolBar-->

    <!--Texto cara-->

    <!--Texto cruz-->

    <!--Texto editable para jugador 1-->
    <!--Texto editable para jugador 2-->

    <!--Imagen de la moneda-->

    <include
        android:id="@+id/include2"
        layout="@layout/toolbar"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp" />

    <TextView
        android:id="@+id/textView"
        style="@style/TituloEstilo"
        android:layout_width="83dp"
        android:layout_height="41dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="68dp"
        android:text="@string/Cara"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        style="@style/TituloEstilo"
        android:layout_width="76dp"
        android:layout_height="41dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:text="@string/Cruz"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/jugador1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:inputType="text"
        android:minHeight="48dp"
        android:hint="@string/Jugador1"
        android:maxLength="10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/include2" />

    <EditText
        android:id="@+id/editTextText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:maxLength="10"
        android:inputType="text"
        android:minHeight="48dp"
        android:hint="@string/Jugador2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/jugador1" />

    <ImageView
        android:id="@+id/imgMonedaCombate"
        android:layout_width="287dp"
        android:layout_height="329dp"
        android:layout_marginBottom="100dp"
        app:layout_constraintBottom_toTopOf="@+id/btnLanzarCombate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/monedacruz" />
    <!--Boton de lanzar-->

    <Button
        android:id="@+id/btnLanzarCombate"
        android:layout_width="186dp"
        android:layout_height="76dp"
        android:layout_marginBottom="36dp"
        android:backgroundTint="@color/Orange"
        android:text="@string/Lanzar"
        app:layout_constraintBottom_toBottomOf="@+id/include2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />
    <!--Texto editable para el resultado-->

    <TextView
        android:id="@+id/txtResultadoCombate"
        style="@style/EstiloResultado"
        android:layout_width="357dp"
        android:layout_height="86dp"
        android:layout_marginBottom="20dp"
        android:text="@string/txtResult"
        app:layout_constraintBottom_toTopOf="@+id/btnLanzarCombate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.511"
        app:layout_constraintStart_toStartOf="parent" />
    <!--Imagen chica de cruz-->

    <!--Imagen chica de cara-->

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="52dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toStartOf="@+id/editTextText2"
        app:layout_constraintHorizontal_bias="0.547"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:srcCompat="@drawable/monedacruz" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="44dp"
        android:layout_height="43dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="68dp"
        app:layout_constraintEnd_toStartOf="@+id/jugador1"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/monedadecara"
        android:layout_marginRight="15dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>